--- a/index.Rmd
+++ b/index.Rmd
@@ -10,6 +10,8 @@ output: html_document
 
 <div align="right">
 
+![Alt text](https://github.com/sestelo/sestelo.github.io/tree/master/images/foto.jpg)
+
 Marta Sestelo (sestelo@mat.uab.cat)    
 Department of Mathematics  
 Autonomous University of Barcelona  
