--- a/index.Rmd
+++ b/index.Rmd
@@ -59,8 +59,23 @@ ___
 
 - **FWDselect** package. Author and mantainer of this package (http://cran.r-project.org/web/packages/FWDselect/), an R package that introduces a simple method to select the best model or best subset of variables using different types of data (continuous, binary or poisson) and applying it in different contexts (parametric or nonparametric).
 
-- **seq2R** package. Author of this package (http://cran.r-project.org/web/packages/seq2R), an R package to detect compositional changes in genomic sequences. This software is useful for loading .fasta or .gbk files, and for retrieving sequences from GenBank dataset. This package allows to detect differences or asymmetries based on nucleotide composition by using local linear kernel smoothers. Also, it is possible to draw inference about critical points (i. e. maximum or minimum points) related with the derivative curves. Additionally, bootstrap methods have been used for estimating confidence intervals and speed computational techniques (binning techniques) have been implemented in **seq2R**.
+- **seq2R** package. Author of this package (http://cran.r-project.org/web/packages/seq2R), an R package to detect compositional changes in genomic sequences. This software is useful for loading .fasta or .gbk files, and for retrieving sequences from GenBank dataset. This package allows to detect differences or asymmetries based on nucleotide composition by using local linear kernel smoothers. Also, it is possible to draw inference about critical points (i. e. maximum or minimum points) related with the derivative curves. Additionally, bootstrap methods have been used for estimating confidence intervals and speed computational techniques (binning techniques) have been implemented in <tt>seq2R<tt>.
 
 ___
 
+
 &copy; [Marta Sestelo](sestelo.github.io) 2014
+
+
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41678546-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
