--- a/index.Rmd
+++ b/index.Rmd
@@ -13,52 +13,63 @@ output: html_document
 <br>
 
 
-<img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto.jpg?raw=true" alt="foto">
-
-<br>
 
 <div align="right">
-Marta Sestelo (sestelo@mat.uab.cat)    
+<p><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/fotoc.png?raw=true" alt="foto">
+
+<br>
+<br>
+<br>
+
+
+**Marta Sestelo**  
 Department of Mathematics  
 Autonomous University of Barcelona  
+sestelo@mat.uab.cat   
+<br style="clear: both;" /></p>
 <div>
+
+
+
+
+
 
 
 <div align="justify">
 
 
 ### About me
-___
+
 
 I am a Postdoctoral Researcher at Autonomous University of Barcelona focus on the development of new methodologies and algorithms related with nonparametric statistics. I am interested in  estimation and inference methods of flexible regression models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are nonparametric curves estimation, testing procedures, variable selection, software development, bootstrap resampling methods and applications to Engineering, Biology or environment. 
 
 <br>
-<br>
+
+___
+
+
 
 
 ### Research
-___
 
 Link to cv latex.
 
+<br>
 
-<br>
-<br>
+___
 
 ### Teaching
-___
+
 
 - Probability Calculus. B.Sc. in Applied Statistics. Autonomous University of Barcelona.
 
 - Simulation, Resampling and Applications. B.Sc. in Applied Statistics. Autonomous University of Barcelona.
 
 <br>
-<br>
 
-### R packages
 ___
 
-
+### R packages
 
 - **NPRegfast** package. Author and maintainer of this R package to perform nonparametric estimation for analyzing interactions factor-by-curve. NPRegfast allows the user to obtain nonparametric estimates using local linear kernel smoothers and compare them between factor's levels. Also a feature of the package is its ability to draw inference about critical points, such as maxima or change points linked to the derivative curves. The inference (confidence intervals and tests) is based on bootstrap. This package allows not only to obtain smooth estimates also based on classical parametric models, as allometric model, one of the most used models in biology frameworks usually used to study the relationship between two biometrical variables. Additionally, we have implemented binning type acceleration techniques
 
@@ -67,11 +78,13 @@ ___
 
 - **seq2R** package. Author of this package (http://cran.r-project.org/web/packages/seq2R), an R package to detect compositional changes in genomic sequences. This software is useful for loading .fasta or .gbk files, and for retrieving sequences from GenBank dataset. This package allows to detect differences or asymmetries based on nucleotide composition by using local linear kernel smoothers. Also, it is possible to draw inference about critical points (i. e. maximum or minimum points) related with the derivative curves. Additionally, bootstrap methods have been used for estimating confidence intervals and speed computational techniques (binning techniques) have been implemented in <tt>seq2R<tt>.
 
+<br>
+
 ___
 
-
+<div align="right">
 &copy; [Marta Sestelo](sestelo.github.io) 2014
-
+<div>
 
 
 <script>
