--- a/index.Rmd
+++ b/index.Rmd
@@ -9,21 +9,23 @@ output: html_document
 
 # sestelo.github.io
 
-
-
-
-<div align="right">
 <p><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto">
 
+
+
+
+
 <br>
 <br>
 <br>
 
-
+<div align="right">
 **Marta Sestelo**  
 Department of Mathematics  
 Autonomous University of Barcelona  
 sestelo@mat.uab.cat   
+<div style="border-right:1px solid #000;height:50px"></div>
+hkjhk
 <br style="clear: both;" /></p>
 <div>
 
