--- a/index.Rmd
+++ b/index.Rmd
@@ -10,8 +10,8 @@ output: html_document
 # sestelo.github.io
 
 <p><img id="foto" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/foto2.png?raw=true" alt="foto">
-
-
+<p><a href="https://www.linkedin.com/profile/view?id=209697998&trk=nav_responsive_tab_profile_pic"><img id="linkedin" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/linkedin.png?raw=true" alt="foto"></a> 
+<p><a href="https://twitter.com/MartaSestelo"><img id="twitter" src="https://github.com/sestelo/sestelo.github.io/blob/master/images/twitter.png?raw=true" alt="foto"></a> 
 
 
 
