--- a/index.Rmd
+++ b/index.Rmd
@@ -57,20 +57,20 @@ ___
 
 ### Research
 
-Link to my complete cv.
+[Here](https://github.com/sestelo/sestelo.github.io/blob/master/sestelo_cv.pdf?raw=true) it is possible to download my complete cv.
 
 
 ##### Journal articles
 
 - A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, A. F. González, M. Cabanellas-Reboredo, M. Calvo-Manazza and B. Morales-Nin (2014). Dwellers in dens on sandy bottoms: Ecological and behavioural traits of Octopus vulgaris. Scientia Marina. In press.
 
-- M. Sestelo, J. Roca-Pardiñas and C. Ordóñez (2014). Predicting SO2 pollution incidents by means of additive models with optimum variable selection. Atmospheric Environment, 95,151-157. 
+- M. Sestelo, J. Roca-Pardiñas and C. Ordóñez (2014). [Predicting SO2 pollution incidents by means of additive models with optimum variable selection](http://www.sciencedirect.com/science/article/pii/S1352231014004713). Atmospheric Environment, 95,151-157. 
 
-- G. Bidegain, M. Sestelo, J. Roca-Pardiñas and J. A. Juanes (2013). Estimating a new suitable catch size for two clam species: Implications for shellfishery management. Ocean and Coastal Management, 71, 52-63.
+- G. Bidegain, M. Sestelo, J. Roca-Pardiñas and J. A. Juanes (2013). [Estimating a new suitable catch size for two clam species: Implications for shellfishery management](http://www.sciencedirect.com/science/article/pii/S0964569112002645). Ocean and Coastal Management, 71, 52-63.
 
-- C. Ordóñez, M. Sestelo, J. Roca-Pardiñas and E. Covián (2012). Variable selection in regression models used to analyse Global Positioning System accuracy in forest environments. Applied Mathematics and Computation, 219, 2220-2230.
+- C. Ordóñez, M. Sestelo, J. Roca-Pardiñas and E. Covián (2012). [Variable selection in regression models used to analyse Global Positioning System accuracy in forest environments](http://www.sciencedirect.com/science/article/pii/S0096300312008624). Applied Mathematics and Computation, 219, 2220-2230.
 
-- M. Sestelo and J. Roca-Pardiñas (2011). A new approach to estimation of the length-weight relationship of Pollicipes pollicipes (Gmelin, 1789) on the Atlantic coast of Galicia (Northwest Spain): Some aspects of its biology and management. Journal of Shellfish Research, 30(3), 939-948.
+- M. Sestelo and J. Roca-Pardiñas (2011). [A new approach to estimation of the length-weight relationship of Pollicipes pollicipes (Gmelin, 1789) on the Atlantic coast of Galicia (Northwest Spain): Some aspects of its biology and management](http://www.bioone.org/doi/abs/10.2983/035.030.0336). Journal of Shellfish Research, 30(3), 939-948.
 
 ##### Book chapters
 
@@ -93,7 +93,7 @@ Link to my complete cv.
 
 ___
 
-### Teaching
+### Teaching <font size="2">(in progress)</font>
 
 
 - Probability Calculus. B.Sc. in Applied Statistics. Autonomous University of Barcelona.
