--- a/index.Rmd
+++ b/index.Rmd
@@ -1,10 +1,7 @@
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 
----
-title: ""
-output: html_document
----  
 
+<title>Marta Sestelo</title>
 
 
 # sestelo.github.io
