--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: sestelo.github.io
 output: html_document
 ---
 <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-
+<meta name="robots" content="noodp"/> 
 
 
 
